# local_wallet_relay

./: README.md  payload.json  view.json
client/aptos-wallet/: package-lock.json  package.json
client/aptos-wallet/src/: App.tsx  index.tsx
server/wallet_server/: Cargo.toml
server/wallet_server/src/: main.rs
